# pg-transact-hspec

./: README.md  hie.yaml  hspec-pg-transact.cabal  stack.yaml
.github/workflows/: ci.yml  install-nix.sh  shell.nix
src/Test/Hspec/: DB.hs
test/: Spec.hs
test/Hspec/: DBSpec.hs
