name:                hspec-pg-transact
version:             0.1.0.0
synopsis: Hspec helpers for database testing
-- description:
homepage:            https://github.com/jfischoff/hspec-pg-transact#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Fischoff
maintainer:          jonathangfischoff@gmail.com
copyright:           2017 Jonathan Fischoff
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: Test.Hspec.DB
  build-depends: base >= 4.7 && < 5
               , hspec
               , tmp-postgres
               , postgresql-simple
               , pg-transact
               , bytestring
               , text
               , resource-pool
  default-language:    Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/githubuser/hspec-pg-transact
